hphp/test/zend/good/ext-sockets/socket_close_params.php
<?php
    // wrong parameter count
    $s_c = socket_close();
    var_dump($s_c);  
?>